<resources>
    <string name="app_name">MyApp</string>
    <string name="welcome_back">Welcome back! Glad to see you, Again!</string>
    <string name="log_In">Log In</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Sign_out">Sign Out</string>
    <string name="Forgot_pass">Forgot Password?</string>
    <string name="Reset_pass">Reset Password</string>
    <string name="Or_login_with">Or Login with</string>
    <string name="Or_signup_with">Or Signup with</string>
    <string name="Dont_have_account">Dont Have An Account? Register Now</string>
    <string name="join_us">Join Us!</string>
    <string name="register">Register</string>
    <string name="Hi">Hi!</string>
    <string name="Farmer">Farmers,</string>
    <string name="We_The_Staff">We the Staff Welcome You to a New Era of farming Culture.</string>
    <string name="join">Join us in this Journey to a new Beginning.</string>


    <string name="facebook_app_id">484656896955600</string>
    <string name="fb_login_protocol_scheme">fb484656896955600</string>
    <string name="facebook_client_token">8aa52949ac8f5462098ba12ee15685fd</string>




</resources>