<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="580dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/joinUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_us"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/joinUs"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/register"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edt_background"
            android:hint="Email"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/phone_No"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/email"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edt_background"
            android:hint="Phone Number"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/phone_No"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edt_background"
            android:hint="Password"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/cnf_pass"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/pass"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edt_background"
            android:hint="Conform Password"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />


        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cnf_pass"
            android:text="@string/Sign_up"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_background"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/or_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_signUp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/Or_login_with"
            android:textColor="@color/black"
            android:textSize="19sp" />


    </RelativeLayout>


</RelativeLayout>